--- a/pppppp/View/AuthView/FirstView.storyboard
+++ b/pppppp/View/AuthView/FirstView.storyboard
@@ -38,32 +38,34 @@
                                     <constraint firstAttribute="height" constant="48" id="gmm-3u-05W"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cQ-6r-tpr">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6GM-5e-cT7">
                                 <rect key="frame" x="32" y="642" width="326" height="48"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="5K8-UO-Gy0"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="48" id="78c-Cz-Nz3"/>
+                                    <constraint firstAttribute="height" constant="48" id="gqL-fx-fDl"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <connections>
+                                    <action selector="sceneEmailSignUpButton" destination="Y6W-OH-hqX" eventType="touchUpInside" id="OBr-sl-oAM"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Qqn-NF-m7a" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="2E4-SN-9dW"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="8cQ-6r-tpr" secondAttribute="trailing" constant="32" id="C0F-Jg-yXp"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="FMb-IX-akA" secondAttribute="trailing" constant="32" id="D2j-yU-t6i"/>
-                            <constraint firstItem="FMb-IX-akA" firstAttribute="top" secondItem="8cQ-6r-tpr" secondAttribute="bottom" constant="24" id="KJ1-7i-XDT"/>
                             <constraint firstItem="FMb-IX-akA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="Lm3-Kv-drU"/>
                             <constraint firstItem="Qqn-NF-m7a" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" constant="-48" id="WL8-TY-3op"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="FMb-IX-akA" secondAttribute="bottom" constant="48" id="qSH-gE-wn0"/>
-                            <constraint firstItem="8cQ-6r-tpr" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="w0M-eB-Cae"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="6GM-5e-cT7" secondAttribute="trailing" constant="32" id="t7c-Mm-rTZ"/>
+                            <constraint firstItem="FMb-IX-akA" firstAttribute="top" secondItem="6GM-5e-cT7" secondAttribute="bottom" constant="24" id="xAn-rI-KsE"/>
+                            <constraint firstItem="6GM-5e-cT7" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="32" id="xM8-eP-a2L"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="AppleLoginButtonView" destination="FMb-IX-akA" id="Em4-Ub-oXn"/>
-                        <outlet property="EmailSignInButtonLayout" destination="8cQ-6r-tpr" id="jcp-Oc-yx2"/>
+                        <outlet property="sceneEmailSignUpButtonLayout" destination="6GM-5e-cT7" id="UXb-tP-Axi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
