--- a/pppppp/View/AuthView/ResetPasswordView.storyboard
+++ b/pppppp/View/AuthView/ResetPasswordView.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rdX-0h-hJ1">
-                                <rect key="frame" x="32" y="356" width="350" height="48"/>
+                                <rect key="frame" x="32" y="424" width="350" height="48"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="mHF-K8-5yh"/>
@@ -27,7 +27,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6p8-Fq-Qnm">
-                                <rect key="frame" x="32" y="424" width="350" height="48"/>
+                                <rect key="frame" x="32" y="492" width="350" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="n70-mi-Aaw"/>
                                 </constraints>
@@ -37,17 +37,25 @@
                                     <action selector="sentEmail" destination="xJ3-lX-HUY" eventType="touchUpInside" id="qRe-Fy-ffH"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yac-Bx-PS1">
+                                <rect key="frame" x="91" y="360" width="232" height="39"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
+                                <color key="textColor" red="0.99215686270000003" green="0.99215686270000003" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5dY-Al-by7"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.2985896468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="rdX-0h-hJ1" firstAttribute="centerY" secondItem="tXh-6h-Yed" secondAttribute="centerY" id="5gc-Oc-Iia"/>
                             <constraint firstItem="6p8-Fq-Qnm" firstAttribute="centerX" secondItem="tXh-6h-Yed" secondAttribute="centerX" id="6xT-iV-6tH"/>
                             <constraint firstItem="6p8-Fq-Qnm" firstAttribute="top" secondItem="rdX-0h-hJ1" secondAttribute="bottom" constant="20" id="Asz-R9-9Lo"/>
                             <constraint firstItem="rdX-0h-hJ1" firstAttribute="centerX" secondItem="tXh-6h-Yed" secondAttribute="centerX" id="KdA-BA-YxD"/>
                             <constraint firstItem="5dY-Al-by7" firstAttribute="trailing" secondItem="rdX-0h-hJ1" secondAttribute="trailing" constant="32" id="PHL-6E-D1b"/>
+                            <constraint firstItem="rdX-0h-hJ1" firstAttribute="top" secondItem="Yac-Bx-PS1" secondAttribute="bottom" constant="25" id="for-Ol-NIG"/>
+                            <constraint firstItem="Yac-Bx-PS1" firstAttribute="centerX" secondItem="tXh-6h-Yed" secondAttribute="centerX" id="giq-b1-fbN"/>
                             <constraint firstItem="5dY-Al-by7" firstAttribute="trailing" secondItem="6p8-Fq-Qnm" secondAttribute="trailing" constant="32" id="lcx-np-3SB"/>
                             <constraint firstItem="rdX-0h-hJ1" firstAttribute="leading" secondItem="5dY-Al-by7" secondAttribute="leading" constant="32" id="sH6-lt-PVw"/>
-                            <constraint firstItem="6p8-Fq-Qnm" firstAttribute="centerY" secondItem="tXh-6h-Yed" secondAttribute="centerY" id="tdG-8r-JO5"/>
                             <constraint firstItem="6p8-Fq-Qnm" firstAttribute="leading" secondItem="5dY-Al-by7" secondAttribute="leading" constant="32" id="xLY-uV-62T"/>
                         </constraints>
                     </view>
