--- a/pppppp/View/AuthView/EmailSignInView.storyboard
+++ b/pppppp/View/AuthView/EmailSignInView.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,13 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1iO-s8-HTc">
-                                <rect key="frame" x="166.5" y="224" width="81" height="39"/>
+                                <rect key="frame" x="166.5" y="292" width="81" height="39"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
                                 <color key="textColor" red="0.99215686270000003" green="0.99215686270000003" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your EmailAddress" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WcI-WB-yXS">
-                                <rect key="frame" x="32" y="288" width="350" height="48"/>
+                                <rect key="frame" x="32" y="356" width="350" height="48"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="GbS-Ah-mjC"/>
@@ -34,7 +33,7 @@
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your Password" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jTm-R9-yn1">
-                                <rect key="frame" x="32" y="356" width="350" height="48"/>
+                                <rect key="frame" x="32" y="424" width="350" height="48"/>
                                 <color key="backgroundColor" red="0.4823529412" green="0.50980392159999999" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="7rj-lv-Vtq"/>
@@ -44,7 +43,7 @@
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES" textContentType="email"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ilx-46-FQq">
-                                <rect key="frame" x="32" y="424" width="350" height="48"/>
+                                <rect key="frame" x="32" y="492" width="350" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="41g-e5-yeo"/>
                                 </constraints>
@@ -54,13 +53,6 @@
                                     <action selector="goButtonPressed" destination="j38-ue-eF5" eventType="touchUpInside" id="YNB-os-ETd"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7jv-G8-ghH">
-                                <rect key="frame" x="32" y="492" width="350" height="48"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="ry9-CI-qrv"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" alpha="0.64999997615814209" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nZV-NE-UkS">
                                 <rect key="frame" x="109.5" y="560" width="195" height="41"/>
                                 <constraints>
@@ -82,25 +74,21 @@
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="WcI-WB-yXS" secondAttribute="trailing" constant="32" id="4v5-5f-dKg"/>
                             <constraint firstItem="1iO-s8-HTc" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="9Pp-Pw-W6I"/>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="9XI-Sj-7LX"/>
-                            <constraint firstItem="7jv-G8-ghH" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="AS8-MB-vJw"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="AnK-ER-jcO"/>
-                            <constraint firstItem="Ilx-46-FQq" firstAttribute="centerY" secondItem="Wev-PF-J9D" secondAttribute="centerY" id="BPD-Lx-NB0"/>
-                            <constraint firstItem="nZV-NE-UkS" firstAttribute="top" secondItem="7jv-G8-ghH" secondAttribute="bottom" constant="20" id="Cat-TF-bkc"/>
-                            <constraint firstItem="7jv-G8-ghH" firstAttribute="top" secondItem="Ilx-46-FQq" secondAttribute="bottom" constant="20" id="ER6-5U-hIN"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="jTm-R9-yn1" secondAttribute="trailing" constant="32" id="Kly-XN-EcL"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="top" secondItem="1iO-s8-HTc" secondAttribute="bottom" constant="25" id="MOL-EH-Wen"/>
                             <constraint firstItem="jTm-R9-yn1" firstAttribute="top" secondItem="WcI-WB-yXS" secondAttribute="bottom" constant="20" id="S7y-BH-Tqg"/>
                             <constraint firstItem="nZV-NE-UkS" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="SqE-xO-OxR"/>
-                            <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="7jv-G8-ghH" secondAttribute="trailing" constant="32" id="UUI-hZ-jNa"/>
                             <constraint firstItem="Ilx-46-FQq" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="VUk-ge-uc2"/>
                             <constraint firstItem="Ilx-46-FQq" firstAttribute="centerX" secondItem="Wev-PF-J9D" secondAttribute="centerX" id="Vvm-Yi-s1c"/>
+                            <constraint firstItem="nZV-NE-UkS" firstAttribute="top" secondItem="Ilx-46-FQq" secondAttribute="bottom" constant="20" id="Z32-x6-M75"/>
+                            <constraint firstItem="jTm-R9-yn1" firstAttribute="centerY" secondItem="Wev-PF-J9D" secondAttribute="centerY" id="aqZ-ad-2Tn"/>
                             <constraint firstItem="Ilx-46-FQq" firstAttribute="top" secondItem="jTm-R9-yn1" secondAttribute="bottom" constant="20" id="gkf-yv-h0K"/>
                             <constraint firstItem="WcI-WB-yXS" firstAttribute="leading" secondItem="dar-mQ-isV" secondAttribute="leading" constant="32" id="pvN-9h-RF2"/>
                             <constraint firstItem="dar-mQ-isV" firstAttribute="trailing" secondItem="Ilx-46-FQq" secondAttribute="trailing" constant="32" id="tWs-yo-I7O"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="AppleLoginButtonView" destination="7jv-G8-ghH" id="Akn-tJ-vTe"/>
                         <outlet property="emailTextField" destination="WcI-WB-yXS" id="iuy-T2-rqd"/>
                         <outlet property="loginButtonLayout" destination="Ilx-46-FQq" id="fo0-f9-B9R"/>
                         <outlet property="loginLabel" destination="1iO-s8-HTc" id="iD2-wN-wKi"/>
@@ -112,9 +100,4 @@
             <point key="canvasLocation" x="1579.7101449275362" y="-224.33035714285714"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
