--- a/pppppp/View/AddFriendsView/ShareMyDataView.storyboard
+++ b/pppppp/View/AddFriendsView/ShareMyDataView.storyboard
@@ -18,20 +18,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bcq-l2-IAg">
                                 <rect key="frame" x="0.0" y="48" width="414" height="814"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xBB-zr-QgO">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="814"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </imageView>
-                                </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="xBB-zr-QgO" secondAttribute="trailing" id="CxG-yy-wYB"/>
-                                    <constraint firstItem="xBB-zr-QgO" firstAttribute="leading" secondItem="bcq-l2-IAg" secondAttribute="leading" id="EUV-Ms-6j9"/>
-                                    <constraint firstAttribute="bottom" secondItem="xBB-zr-QgO" secondAttribute="bottom" id="qVa-wY-XUT"/>
-                                    <constraint firstItem="xBB-zr-QgO" firstAttribute="top" secondItem="bcq-l2-IAg" secondAttribute="top" id="zhc-V9-Imh"/>
-                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5fy-dV-ESd">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -65,6 +52,9 @@
                                 <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="openAlbumButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="mnB-H0-nfk"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="urc-n8-HmE">
                                 <rect key="frame" x="88" y="662" width="238" height="34"/>
@@ -86,6 +76,13 @@
                                     <action selector="showMyQRCode" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Fdo-kw-nyX"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nzz-ZI-p4X">
+                                <rect key="frame" x="87" y="328" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="xkl-hl-AyQ"/>
+                                    <constraint firstAttribute="width" constant="240" id="zlb-ze-m7L"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" red="0.070588235294117646" green="0.0" blue="0.29803921568627451" alpha="1" colorSpace="calibratedRGB"/>
@@ -95,6 +92,7 @@
                             <constraint firstItem="5fy-dV-ESd" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="6Jo-LQ-gAN"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="bcq-l2-IAg" secondAttribute="bottom" id="9lO-dp-3ng"/>
                             <constraint firstAttribute="bottom" secondItem="xU5-xE-ref" secondAttribute="bottom" constant="80" id="ApO-a1-wM2"/>
+                            <constraint firstItem="Nzz-ZI-p4X" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="GV3-Nq-vya"/>
                             <constraint firstItem="bcq-l2-IAg" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="GlX-F0-Xh8"/>
                             <constraint firstItem="5fy-dV-ESd" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="Nty-RS-eZw"/>
                             <constraint firstAttribute="bottom" secondItem="5fy-dV-ESd" secondAttribute="bottom" id="Xc0-DZ-xql"/>
@@ -107,16 +105,17 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="FQF-Xb-Gd3" secondAttribute="trailing" constant="88" id="l4y-qs-mUo"/>
                             <constraint firstItem="zbe-UI-CKp" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="lPV-Qv-DGR"/>
                             <constraint firstAttribute="bottom" secondItem="urc-n8-HmE" secondAttribute="bottom" constant="200" id="nSA-7Y-ugQ"/>
+                            <constraint firstItem="Nzz-ZI-p4X" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="tz0-a8-T0Z"/>
                             <constraint firstItem="urc-n8-HmE" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="88" id="ubn-ad-CYU"/>
                             <constraint firstItem="FQF-Xb-Gd3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="88" id="xWg-bn-TMi"/>
                             <constraint firstAttribute="bottom" secondItem="FQF-Xb-Gd3" secondAttribute="bottom" constant="256" id="zhb-Qt-eeA"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="QRCodeFromAlbumView" destination="Nzz-ZI-p4X" id="ccj-gv-v6U"/>
                         <outlet property="albumButtonLayout" destination="xU5-xE-ref" id="BwB-Jo-S9V"/>
                         <outlet property="caputureView" destination="bcq-l2-IAg" id="oPL-lQ-pOL"/>
                         <outlet property="gradationFilterView" destination="5fy-dV-ESd" id="fMh-yo-XiY"/>
-                        <outlet property="photoImageView" destination="xBB-zr-QgO" id="KkW-fp-sFs"/>
                         <outlet property="settingLightLayout" destination="5iP-pf-8Mi" id="fFS-PT-4Mj"/>
                         <outlet property="shareLinkLayout" destination="urc-n8-HmE" id="VgP-IZ-Vg7"/>
                         <outlet property="showMyQRCodeLayout" destination="FQF-Xb-Gd3" id="Ezh-RP-Hkz"/>
