--- a/pppppp/View/CreatePoint/HealthDataView.storyboard
+++ b/pppppp/View/CreatePoint/HealthDataView.storyboard
@@ -75,17 +75,82 @@
                                     <constraint firstItem="loL-8f-2LO" firstAttribute="top" secondItem="GYI-q8-w9F" secondAttribute="bottom" constant="16" id="xu1-gX-maV"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Xv-kx-Zoh">
+                                <rect key="frame" x="24" y="304" width="366" height="176"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Exercise &amp; Time." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbS-71-7GY">
+                                        <rect key="frame" x="24" y="24" width="170" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="select exercise." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NoX-SH-DcP">
+                                        <rect key="frame" x="24" y="60" width="232" height="40"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.23999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="7Ai-VX-oqY"/>
+                                            <constraint firstAttribute="width" constant="232" id="b1J-QB-JdH"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCv-IG-eh2">
+                                        <rect key="frame" x="296" y="87" width="54" height="32"/>
+                                        <color key="backgroundColor" red="0.52156862749999999" green="0.62745098040000002" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="32" id="kHi-Bf-zLl"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Add">
+                                            <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
+                                            <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </buttonConfiguration>
+                                    </button>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="enter exercise time." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xTX-mp-TUU">
+                                        <rect key="frame" x="24" y="116" width="232" height="40"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.23999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="232" id="Lyv-Nf-rIR"/>
+                                            <constraint firstAttribute="height" constant="40" id="PKh-1C-9cn"/>
+                                            <constraint firstAttribute="width" constant="232" id="VIu-Mm-aK7"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="gHP-wz-58I"/>
+                                        </constraints>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="bbS-71-7GY" firstAttribute="leading" secondItem="9Xv-kx-Zoh" secondAttribute="leading" constant="24" id="0vS-9s-6Wv"/>
+                                    <constraint firstItem="xTX-mp-TUU" firstAttribute="leading" secondItem="9Xv-kx-Zoh" secondAttribute="leading" constant="24" id="WEj-oz-Mw6"/>
+                                    <constraint firstItem="bbS-71-7GY" firstAttribute="top" secondItem="9Xv-kx-Zoh" secondAttribute="top" constant="24" id="Zyl-eN-MmN"/>
+                                    <constraint firstItem="xTX-mp-TUU" firstAttribute="top" secondItem="NoX-SH-DcP" secondAttribute="bottom" constant="16" id="ebR-tA-P01"/>
+                                    <constraint firstAttribute="height" constant="176" id="h9h-t3-ogF"/>
+                                    <constraint firstItem="jCv-IG-eh2" firstAttribute="top" secondItem="9Xv-kx-Zoh" secondAttribute="top" constant="87" id="hTH-B0-8He"/>
+                                    <constraint firstItem="NoX-SH-DcP" firstAttribute="top" secondItem="bbS-71-7GY" secondAttribute="bottom" constant="16" id="oMp-kd-ZDq"/>
+                                    <constraint firstItem="NoX-SH-DcP" firstAttribute="leading" secondItem="9Xv-kx-Zoh" secondAttribute="leading" constant="24" id="tM3-tT-DcE"/>
+                                    <constraint firstAttribute="trailing" secondItem="jCv-IG-eh2" secondAttribute="trailing" constant="16" id="xIa-R0-EdU"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SVz-Sw-HEj"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="bMI-by-4Vb" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="1hF-RT-8nW"/>
                             <constraint firstItem="bMI-by-4Vb" firstAttribute="top" secondItem="SVz-Sw-HEj" secondAttribute="top" constant="40" id="WXa-aj-mat"/>
+                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="top" secondItem="bMI-by-4Vb" secondAttribute="bottom" constant="40" id="XWA-SQ-vQh"/>
+                            <constraint firstItem="9Xv-kx-Zoh" firstAttribute="leading" secondItem="SVz-Sw-HEj" secondAttribute="leading" constant="24" id="bLZ-3Y-6pe"/>
                             <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="bMI-by-4Vb" secondAttribute="trailing" constant="24" id="kAK-Tb-vKy"/>
+                            <constraint firstItem="SVz-Sw-HEj" firstAttribute="trailing" secondItem="9Xv-kx-Zoh" secondAttribute="trailing" constant="24" id="oN1-bs-bjC"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="enterExerciseBackgroundView" destination="9Xv-kx-Zoh" id="BZR-hX-fEI"/>
                         <outlet property="enterWeightbackgroundView" destination="bMI-by-4Vb" id="thh-5Q-6ge"/>
+                        <outlet property="exerciseTimeTextField" destination="xTX-mp-TUU" id="Os5-Xe-ia3"/>
+                        <outlet property="saveExerciseButtonLayout" destination="jCv-IG-eh2" id="5Nj-7q-oGm"/>
+                        <outlet property="selectExerciseTextField" destination="NoX-SH-DcP" id="cdw-xS-JPx"/>
                         <outlet property="weightTextField" destination="loL-8f-2LO" id="NVM-Kf-t6S"/>
                         <outlet property="writeWeightDataButtonLayout" destination="62u-dQ-csJ" id="Llv-0f-qwV"/>
                     </connections>
